crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__missing_closing_brace_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/missing_closing_brace_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            7,
        ),
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..10,
                    value: Dict(
                        ExprDict {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 0..10,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    1,
                                                ),
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: BinOp(
                                        ExprBinOp {
                                            node_index: NodeIndex(
                                                4,
                                            ),
                                            range: 5..10,
                                            left: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(
                                                        2,
                                                    ),
                                                    range: 5..6,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            op: Add,
                                            right: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(
                                                        3,
                                                    ),
                                                    range: 9..10,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | {x:
2 |
3 | 1 + 2
  |      ^ Syntax Error: unexpected EOF while parsing
  |
